--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,12 +1,26 @@
 <style>
     .final_de_pagina{
-      text-align: center;
-      background:#4D4E4F;
-      color:white;
-
       
+      background:#051367;
+      color:white;  
+    }
+    .final_de_pagina a{
+      color:white;
+      font-size: large; 
+      
+    }
+    .nav-link active {
+
+      text-align: left;
+      color:aliceblue
     }
 </style>
 <footer class="final_de_pagina">
+  
+    <a class="nav-link active" aria-current="page" routerLink="sobrenosotros">¿Quiénes Somos?</a>
+  
+  
+    <a class="nav-link active" aria-current="page" routerLink="sobrenosotros">Misión y Visión</a>
+  
   <h5>@Derechos de Tesis -Taki-Tri</h5>  
 </footer>
