--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -14,13 +14,10 @@
     <a class="home" routerLink="home">Taki-Tri</a>
       <ul class="nav">
         <li  routerLinkActive ="active" class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="sobrenosotros">Sobre Nosotros</a>
-        </li>
-        <li  routerLinkActive ="active" class="nav-item">
-          <a class="nav-link" href="#">Inicio de Sesión</a>
+          <a class="nav-link" [routerLink]="['/login']">Inicio de Sesión</a>
         </li>
         <li routerLinkActive ="active" class="nav-item">
-          <a class="nav-link" href="#">Registro</a>
+          <a class="nav-link" [routerLink]="['/register']">Registro</a>
         </li>
         
       </ul>
