--- a/src/app/shared/welcome/welcome.component.html
+++ b/src/app/shared/welcome/welcome.component.html
@@ -1,30 +1,119 @@
 <style>
+  .Pagina_principal {
+    background: #2D31FA;
+    color: white;
+    font-size: 250% ;
+    padding-left: 150px;
+    padding-top: 120px;
+    text-align: left;
+    display: flex;
+    padding-bottom: 250px;
     
-    .Pagina_principal_derecha{
-        display: flex;
-    }
-    .Pagina_principal_izquierda{
-        background: wheat;
-        text-align: center;
-    }
-    .Pagina_principal_izquierda img{
-        margin-top: 30px;
-    }
+  }
+  .Pagina_principal h1{
+    font-size: 260% ;
+  }
+  .Pagina_principal_derecho h1{
+    font-size: 180% ;
+    width: 750px;
+    padding-bottom: 90px;
+    
+    
+  }
+  .button_ver_mas{
+    color: black;
+    background: #DFF6FF;
+    border-radius: 30px;
+    width: 150px;
+    text-align: center;
+    margin-left: 490px;
+    
+  }
+  .generos_Musicales h2{
+    font-size: 160% ;
+    padding-top: 100px;
+    text-align: center;
+    padding-bottom: 30px;
+  }
+  .card{
+  
+    height: 550px;
+    color:black;
+    text-align: center;
+    width: 350px;
+    border-radius: 30px;
+    margin-left: 120px;
+  }
+  .card img{
+    border-radius: 30px;
+  }
+  .card_generos{
+    display: flex;
+    margin-right: 80px;
+  }
+  
+  .card img{
+    padding-top: 20px;
+    border-radius: 30px;
+    height: 430px;
+  }
+
+    
+   
+  
    
     
 </style>
 <div class="Pagina_principal col-lg-12 col-md-12 col-sm-12">
-    <div class="row col-lg-12 col-md-12 col-sm-12">
-      <div class="col Pagina_principal_derecha col-lg-6 col-md-12 col-sm-12">
-          <img src="https://images.pexels.com/photos/3756766/pexels-photo-3756766.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" height="900px">
-        </div>
-          <div class="col Pagina_principal_izquierda col-lg-6 col-md-12 col-sm-12">
-            <h3>TAKI-TRI</h3>
-        <img src="https://i1.sndcdn.com/artworks-000008732541-ibekin-t500x500.jpg">
-         
-          <h4>Recuperemos nuestra identidad culturar sin interupciones</h4>
+   
+
+ <div class="Pagina_principal_derecho col-lg-12 col-md-12 col-sm-12">
+  <h1>Se parte de la Identidad Musical Ecuatoriana</h1>
+  <button type="button" class="button_ver_mas"><h3>ver más</h3></button>
+
+  <div class="generos_Musicales">
+
+    <h2>Géneros Musicales </h2>
+    <div class="card_generos">
+
+    <div class="card" >
      
-      </div>
+      <div class="card-body">
+        <h3 class="card-title">Pasillo</h3>
+        <img src="https://images.pexels.com/photos/5311643/pexels-photo-5311643.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="card-img-top" alt="...">
+      
     </div>
   </div>
+
+
+  <div class="card" >
+     
+    <div class="card-body">
+      <h3 class="card-title">San Juanito</h3>
+      <img src="https://images.pexels.com/photos/9630166/pexels-photo-9630166.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="card-img-top" alt="..." >
+    
+  </div>
+</div>
+
+
+  </div>
+
+
+
+
+
+  </div>
+
+   
+
+
+ </div>
+
+
+ 
+
+ 
+
+
+</div>
 
