--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -20,7 +20,7 @@
     <a class="nav-link active" aria-current="page" routerLink="sobrenosotros">¿Quiénes Somos?</a>
   
   
-    <a class="nav-link active" aria-current="page" routerLink="sobrenosotros">Misión y Visión</a>
+    <a class="nav-link active" aria-current="page" routerLink="mision-vision">Misión y Visión</a>
   
   <h5>@Derechos de Tesis -Taki-Tri</h5>  
 </footer>
