--- a/src/app/shared/welcome/welcome.component.html
+++ b/src/app/shared/welcome/welcome.component.html
@@ -64,11 +64,19 @@
    
     
 </style>
+
+
+
+
+
 <div class="Pagina_principal col-lg-12 col-md-12 col-sm-12">
    
 
  <div class="Pagina_principal_derecho col-lg-12 col-md-12 col-sm-12">
-  <h1>Se parte de la Identidad Musical Ecuatoriana</h1>
+   <div class="parte_principal">
+  <h1 >Se parte de la Identidad Musical Ecuatoriana</h1>
+  <img  src="assets/imagenes/oficial_logo.png" width="300px" height="250px">
+</div>
   <button type="button" class="button_ver_mas"><h3>ver más</h3></button>
 
   <div class="generos_Musicales">
