--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -7,7 +7,7 @@
 }
 
 .card_imagen img{
- height: 500px;
+height: 100%;
  width: 700px;
  
 }
@@ -28,7 +28,7 @@ text-align: center;
     color: white;
 }
 .card_login{
-margin-top: 70px;
+margin-top: 30px;
 align-items: center;
 text-align: center;
 margin-left: 60px;
@@ -50,4 +50,27 @@ color: white;
     background: #2D31FA;
     color:white;
 
+}
+.imagen{
+    margin-top: 50px;
+ border-radius: 10px;   
+}
+.green{
+    border-color: green;
+}
+.red{
+    border-color: red; 
+}
+
+
+
+.navbar-brand{
+    display:contents;
+  
+  }
+  .home{
+      text-decoration: none;
+}
+.error_mensaje{
+    color:red
 }
