--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,5 +1,18 @@
+
 <p>Bienvenido a Taki-Tri 
 {{ usuario }}
 </p>
+<button class="btn" (click)="salir()">salir</button>
+<button class="btn" (click)="ingresar()">agregar</button>
+<button class="btn"><a [routerLink]="['/show']">Perfil</a> </button>
+
+
+
+
+
+
+
+
  
+
 
