--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -10,24 +10,18 @@
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img src="#" alt="" width="30" height="24" class="d-inline-block align-text-top">
+      <img src="assets/imagenes/oficial_logo.png"alt="" width="30" height="34" class="d-inline-block align-text-top">
     <a class="home" routerLink="home">Taki-Tri</a>
-      <ul class="nav">
-        <li  routerLinkActive ="active" class="nav-item" *ngIf="!isLogged">
+      <ul class="nav">      
+        <li  class="nav-item" *ngIf="!isLogged" >
           <a class="nav-link" [routerLink]="['/login']">Inicio de Sesión</a>
         </li>
-        <li routerLinkActive ="active" class="nav-item" *ngIf="!isLogged">
+        <li  class="nav-item" *ngIf="!isLogged" >
           <a class="nav-link" [routerLink]="['/register']">Registro</a>
         </li>
-
-        <li routerLinkActive ="active" class="nav-item" *ngIf="isLogged" >
-          <a class="nav-link" [routerLink]="['/dashboard']">dashboard</a>
-        </li>
-
        
-
-        <li routerLinkActive ="active" class="nav-item" *ngIf="isLogged" >
-          <a class="nav-link" [routerLink]="['/home']">salir</a>
+        <li  class="nav-item" *ngIf="isLogged" >
+          <a class="nav-link" [routerLink]="['/dashboard']">dashboard</a>
         </li>
         
       </ul>
