--- a/src/app/components/perfil/edit/edit.component.html
+++ b/src/app/components/perfil/edit/edit.component.html
@@ -1,1 +1,19 @@
 <p>edit works!</p>
+<form [formGroup]="ediForm" (ngSubmit)="onSubmit()" novalidate>
+
+    <div class="mb-3">
+        <label class="form-label">name</label>
+        <input formControlName="name" type="text" class="form-control" required>      
+    </div>
+    <div class="mb-3">
+        <label class="form-label">apellido</label>
+        <input formControlName="apellido" type="text" class="form-control" required>      
+    </div>
+    <div class="mb-3">
+        <label class="form-label">nickname</label>
+        <input formControlName="nickname" type="text" class="form-control" required>       
+    </div>
+    
+    <button type="submit" class="btn btn-primary">Update</button>
+
+</form>
