--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
 {{ usuario }}
 </p>
 <button class="btn" (click)="salir()">salir</button>
-<button class="btn"><a [routerLink]="['/show']">Perfil</a> </button>
+<button routerLink="/show/{{usuario}}" class="btn btn-outline-secondary">ver Perfil</button>
 
 
 
