--- a/src/app/components/perfil/edit/edit.component.html
+++ b/src/app/components/perfil/edit/edit.component.html
@@ -1,19 +1,27 @@
-<p>edit works!</p>
-<form [formGroup]="ediForm" (ngSubmit)="onSubmit()" novalidate>
+<div class="formulario_editar_completo">
+<app-sidenav></app-sidenav>
 
+<form [formGroup]="ediForm" (ngSubmit)="onSubmit()" novalidate class="formulario_editar_perfil">
+    <h2>Editar tu Perfil </h2>
+    <hr>
     <div class="mb-3">
-        <label class="form-label">name</label>
+        <label class="form-label">Nombre</label>
         <input formControlName="name" type="text" class="form-control" required>      
     </div>
     <div class="mb-3">
-        <label class="form-label">apellido</label>
+        <label class="form-label">Apellido</label>
         <input formControlName="apellido" type="text" class="form-control" required>      
     </div>
     <div class="mb-3">
-        <label class="form-label">nickname</label>
+        <label class="form-label">Nickname</label>
         <input formControlName="nickname" type="text" class="form-control" required>       
     </div>
+   
+
     
     <button type="submit" class="btn btn-primary">Update</button>
+    <button  routerLink="/show/{{usuario}}" type="submit" class="btn btn-primary">Regresar</button>
 
 </form>
+
+</div>
