--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -3,6 +3,7 @@
       
       background:#051367;
       color:white;  
+     
     }
     .final_de_pagina a{
       color:white;
@@ -15,7 +16,9 @@
       color:aliceblue
     }
 </style>
-<footer class="final_de_pagina">
+<footer class="final_de_pagina  bg-dark">
+  <br>
+ 
   
     <a class="nav-link active" aria-current="page" routerLink="sobrenosotros">¿Quiénes Somos?</a>
   
