--- a/src/app/shared/welcome/welcome.component.html
+++ b/src/app/shared/welcome/welcome.component.html
@@ -11,12 +11,15 @@
     
   }
   .Pagina_principal h1{
-    font-size: 260% ;
+    font-size: 100% ;
   }
   .Pagina_principal_derecho h1{
-    font-size: 180% ;
-    width: 750px;
+    font-size: 160% ;
+    width: 600px;
     padding-bottom: 90px;
+    padding-top: 50px;
+    line-height:normal;
+    
     
     
   }
@@ -75,6 +78,7 @@
  <div class="Pagina_principal_derecho col-lg-12 col-md-12 col-sm-12">
    <div class="parte_principal">
   <h1 >Se parte de la Identidad Musical Ecuatoriana</h1>
+  
   <img  src="assets/imagenes/oficial_logo.png" width="300px" height="250px">
 </div>
   <button type="button" class="button_ver_mas"><h3>ver más</h3></button>
