--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,9 +1,20 @@
 
-<p>Bienvenido a Taki-Tri 
-{{ usuario }}
-</p>
-<button class="btn" (click)="salir()">salir</button>
-<button routerLink="/show/{{usuario}}" class="btn btn-outline-secondary">ver Perfil</button>
+
+    
+
+<div class="dasboard_completo">
+ <app-sidenav></app-sidenav>
+
+<p class="id_usuario_perfil">Bienvenido a Taki-Tri 
+    {{ usuario }}
+    </p>
+    
+    <button class="btn" (click)="salir()">salir</button>
+    <button routerLink="/show/{{usuario}}" class="btn btn-outline-secondary">ver Perfil</button>
+    
+</div>
+
+
 
 
 
