--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -5,9 +5,13 @@
   }
   .home{
       text-decoration: none;
+      color: aliceblue;
+    }
+    .nav-link{
+      color: aliceblue;
     }
 </style>
-<nav class="navbar navbar-light bg-light">
+<nav class="navbar navbar-light bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
       <img src="assets/imagenes/oficial_logo.png"alt="" width="30" height="34" class="d-inline-block align-text-top">
