--- a/src/app/components/usuarios/solicitud/solicitud.component.html
+++ b/src/app/components/usuarios/solicitud/solicitud.component.html
@@ -1,5 +1,5 @@
 <div class="formulario">
-<app-sidenav></app-sidenav>
+    <app-sidenav-user></app-sidenav-user>
 <div class="formulario_solicitud">
 <p>Solicitud</p>
 <h2>Enviar Solicitud</h2>
