--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,13 +1,20 @@
-<div class="card mt-5">
-    <div class="card-body">
+<app-header></app-header>
+
+<div class="formulario_forgot_password">
+  <img src="https://images.pexels.com/photos/3756766/pexels-photo-3756766.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
+
+  
+    <div class="card-body m-2">
+      
       <h3 class="card-title text-center ">Ingrese su email</h3>
-      <div class="form-group">
+      <div class="form-group m-2">
         <input type="email"class="form-control" [formControl]="userEmail"required  />
       </div>
       <div class="form-group text-center">
-        <button class="btn btn-primary btn-lg" (click)="onReset()" >
-          Enviar el correo de verificación
+        <button [disabled]="userEmail.invalid" class="btn btn-primary btn-lg" (click)="onReset()" >
+          Enviar el correo
         </button>
       </div>
     </div>
-  </div>
+
+</div>
