--- a/src/app/auth/register/register.component.css
+++ b/src/app/auth/register/register.component.css
@@ -69,8 +69,12 @@ color: white;
 .home{
       text-decoration: none;
     }
+
 .error_mensaje{
     color:red
-}    
+}
+.nav-link{
+    color: aliceblue;
+  }    
 
     
