--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,4 +1,24 @@
-
+<nav class="navbar navbar-light bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+      <img src="assets/imagenes/oficial_logo.png"alt="" width="30" height="34" class="d-inline-block align-text-top">
+    <a class="home" routerLink="home">Taki-Tri</a>
+      <ul class="nav">      
+        <li  class="nav-item" *ngIf="!isLogged" >
+          <a class="nav-link" [routerLink]="['/login']">Inicio de Sesión</a>
+        </li>
+        <li  class="nav-item" *ngIf="!isLogged" >
+          <a class="nav-link" [routerLink]="['/register']">Registro</a>
+        </li>
+       
+        <li  class="nav-item" *ngIf="isLogged" >
+          <a class="nav-link" [routerLink]="['/dashboard']">dashboard</a>
+        </li>
+        
+      </ul>
+    </a>
+  </div>
+</nav>
 
 
 
