--- a/src/app/components/administrador/administrador.component.html
+++ b/src/app/components/administrador/administrador.component.html
@@ -1,6 +1,6 @@
 
 
-
+<app-header-admin></app-header-admin>
 <div class="Visualizacion_artistas_completa">
     <app-sidenav></app-sidenav>
 <div class="formulario_completo_artistas">
