--- a/src/app/components/usuarios/perfil-artist/show-artist/show-artist.component.html
+++ b/src/app/components/usuarios/perfil-artist/show-artist/show-artist.component.html
@@ -1,6 +1,6 @@
 
    
-   
+   <app-header-artist></app-header-artist>  
 <div class="perfil_completo">
           
     <app-sidenav-user></app-sidenav-user>
