--- a/src/app/components/usuarios/sidenav-user/sidenav-user.component.css
+++ b/src/app/components/usuarios/sidenav-user/sidenav-user.component.css
@@ -12,3 +12,14 @@
     width: 300px;
     display: flex;
 }
+.navbar-brand{
+    display:contents;
+  
+  }
+  .home{
+      text-decoration: none;
+      color: aliceblue;
+    }
+    .nav-link{
+      color: aliceblue;
+    }
