--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -1,4 +1,14 @@
-
+.navbar-brand{
+    display:contents;
+  
+  }
+  .home{
+      text-decoration: none;
+      color: aliceblue;
+    }
+    .nav-link{
+      color: aliceblue;
+    }
 
 
 
