--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -2,7 +2,7 @@
 <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" >
     <a href="#" class="nav-link text-white">
         <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
-        {{roles_admin}}
+        Administrador
       </a>
   <hr>
   <ul class="nav nav-pills flex-column mb-auto">
@@ -23,29 +23,24 @@
     <li>
       <a routerLink="/administrador" class="nav-link text-white">
         <svg class="bi me-2" width="16" height="60"></svg>
-        {{mostrar_solicitud_Nuevas}}
+        Solicitud Nuevas
       </a>
     </li>
     <li  >
       <a routerLink="/solicitud-aceptadas" class="nav-link text-white">
         <svg class="bi me-2" width="16" height="60"></svg>
-        {{mostrar_solicitud_Aprobadas}}
+       Solicitud Aceptadas
       </a>
     </li>
     <li  >
       <a href="#" class="nav-link text-white">
         <svg class="bi me-2" width="16" height="60"><use xlink:href="#people-circle"/></svg>
-        {{mostrar_solicitud_Rechazadas}}
+        Solicitud Rechazadas
       
       </a>
       
     </li>
-    <li>
-      <a routerLink="/solicitud" class="nav-link text-white">
-        <svg class="bi me-2" width="16" height="60"></svg>
-        {{mostrar_enviar_solicitud}}
-      </a>
-    </li>
+ 
   
   <li>
   </ul>
