--- a/src/app/components/administrador/solicitud-aceptadas/solicitud-aceptadas.component.html
+++ b/src/app/components/administrador/solicitud-aceptadas/solicitud-aceptadas.component.html
@@ -1,4 +1,4 @@
-
+<app-header-admin></app-header-admin>
 <div class="Visualizacion_artistas_completa_aceptados">
     <app-sidenav></app-sidenav>
 <div class="formulario_completo_artistas_aceptados">
