--- a/src/app/components/administrador/solicitud-aceptadas/solicitud-aceptadas.component.css
+++ b/src/app/components/administrador/solicitud-aceptadas/solicitud-aceptadas.component.css
@@ -7,3 +7,12 @@
     margin-left: 100px;
     width: 600px; 
 }
+.text-white{
+    color: black;
+}
+.nav-link{
+    color: black;
+}
+.nombre_list{
+    color: black;
+}
