--- a/src/app/shared/header-admin/header-admin.component.html
+++ b/src/app/shared/header-admin/header-admin.component.html
@@ -6,7 +6,7 @@
       <a class="home" routerLink="home">Taki-Tri</a>
         <ul class="nav">      
           <li  class="nav-item"  >
-            <a class="nav-link" [routerLink]="['/dashboard']">dashboard</a>
+            <a class="nav-link" [routerLink]="['/dashboard']">dashboard/admin</a>
           </li>
           
         </ul>
