--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,6 +1,6 @@
 
 <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" >
-    <a href="#" class="nav-link text-white">
+    <a href="#" class="nav-link text-white"  >
         <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
         Administrador
       </a>
@@ -20,32 +20,32 @@
         </a>
       </li>
     
-    <li>
+    <li  >
       <a routerLink="/administrador" class="nav-link text-white">
         <svg class="bi me-2" width="16" height="60"></svg>
         Solicitud Nuevas
       </a>
     </li>
-    <li  >
+    <li   >
       <a routerLink="/solicitud-aceptadas" class="nav-link text-white">
         <svg class="bi me-2" width="16" height="60"></svg>
        Solicitud Aceptadas
       </a>
     </li>
     <li  >
-      <a href="#" class="nav-link text-white">
+      <a routerLink="/solicitud-rechazadas" class="nav-link text-white">
         <svg class="bi me-2" width="16" height="60"><use xlink:href="#people-circle"/></svg>
         Solicitud Rechazadas
+      
       
       </a>
       
     </li>
- 
   
   <li>
   </ul>
   <br>
-  
 
   <hr>
+
 </div>
