--- a/src/app/auth/send-email/send-email.component.html
+++ b/src/app/auth/send-email/send-email.component.html
@@ -1,25 +1,32 @@
 <app-header></app-header>
 <div class="card mt-5" *ngIf="user$ |async as user;else loading">
+
     <div class="card-body">
-       
-      <h3 class="card-title text-center">Thank you for Registering!</h3>
+      <img src="../../assets/imagenes/oficial_logo.png" alt="">
+      
       <div class="form-group mt-2">
+        <h3 class="card-title text-center">Gracias por Registrarte!</h3>
         <p class="text-center">
-          We have sent a confirmation email to <strong>{{ user?.email }}</strong>
+          Nosotros enviamos el correo de verificacion a : <strong>{{ user?.email }}</strong>
         </p>
         <p class="text-center">
-          Please check your email and click on the link to verify your email
-          address.
+       Por favor, si no te llego el correo has click para generalo nuevamente...
         </p>
-      </div>
+    
       <div class="form-group text-center mt-5">
         <button class="btn btn-primary" (click)="onSendEmail()">
-          Resend verification email
+          Enviar correo de verificación
         </button>
       </div>
+    </div>
     </div>
   </div>
   
   <ng-template #loading>
-    Loading....
+    <div class="send_email">
+    <div class="loader">
+      
+    </div>
+    <h2>Cargando Datos... </h2>
+  </div>
   </ng-template>
