--- a/src/app/components/usuarios/sidenav-user/sidenav-user.component.html
+++ b/src/app/components/usuarios/sidenav-user/sidenav-user.component.html
@@ -9,7 +9,7 @@
     <li>
         <a routerLink="/show-artist/{{usuario}}" class="nav-link text-white">
           <svg class="bi me-2" width="16" height="60"></svg>
-         Perfil
+         Perfil-user
         </a>
       </li>
 
@@ -21,7 +21,7 @@
       </li>
     
     <li>
-      <a routerLink="/" class="nav-link text-white">
+      <a routerLink="/generos" class="nav-link text-white">
         <svg class="bi me-2" width="16" height="60"></svg>
         Generos
       </a>
