Sprint3_generos_terminado

--- a/src/app/components/usuarios/generos/generos.component.html
+++ b/src/app/components/usuarios/generos/generos.component.html
@@ -19,7 +19,7 @@
         
 
         <button type="button" class="btn btn-danger"
-          (click)="eliminar_genero(generos.id,generos.Genero_nuevo)">Eliminar</button>
+          (click)="eliminar_genero(generos)">Eliminar</button>
 
 
 
